<resources>
    <string name="app_name">FreeBay</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Password</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="incorrectAccount">Incorrect account</string>
    <string name="fieldsEmpty">Empty(ies) field(s)</string>
    <string name="nothingInDb">Be the first to create</string>
    <string name="regPseudo">Pseudo must be 3 20 characters and can\'t contain special characters</string>
    <string name="rulesPassword">Password can\'t be > 200</string>
    <string name="rulesPasswordVerif">Passwords are not identical</string>
    <string name="explainPermissions">This permission is required to use the GPS </string>
    <string name="permissionDisabled">You have disabled the permission</string>
    <string name="createdAccount">Created account</string>
    <string name="pseudoExist">This pseudo is already in use</string>
    <string name="hintPsw">Rewrite your password</string>
    <string name="logout">Log out</string>
    <string name="myList">See my tracked items</string>
    <string name="addItem">Sell item</string>
    <string name="name_item">Name : </string>
    <string name="price_item">Price : </string>
    <string name="desc_item">Description : </string>
    <string name="type_item">Type : </string>
    <string name="wizard_type">No idea ?</string>
    <string name="title_addItem">Add item</string>
    <string name="rulesNameItem">The name of an object must be between 2 and 30 characters long, contain no spaces or special characters</string>
    <string name="rulesPrice">The price cannot contain a letter and must be between 0 and 100000</string>
    <string name="rulesDesc">The description of the object may not contain more than 500 characters, nor special characters</string>
    <string name="rulesType">The type of an object must be between 2 and 30 characters long, contain no spaces or special characters</string>
    <string name="createdItem">Your item has been put up for sale</string>
    <string name="follow">Follow this item</string>
    <string name="alreadyInList">This item is already followed</string>
    <string name="okFollow">You are following this item</string>
    <string name="noItems">Nothing to display</string>
    <string name="chooseType">Choice of type</string>
    <string name="consultItems">Consult items</string>
    <string name="choose">Choose</string>
    <string name="nothingSelected">Nothing selected</string>
    <string name="distance">Distance from each other : </string>
    <string name="seller">Seller : </string>
    <string name="maxDistance">Max. distance</string>
    <string name="viewAll">View all</string>
    <string name="consultMyList">View my list of tracked items</string>
    <string name="see_my_sales">See my sales</string>
    <string name="consultMySales">Consult my sales</string>
    <string name="you">You</string>
    <string name="sort">Sort</string>
    <string name="addPicture">Add picture from gallery</string>
</resources>