<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/layout_signup"
    tools:context=".Signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:theme="@style/title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pseudo"/>
    <EditText
        android:id="@+id/et_pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />
    <EditText
        android:id="@+id/et_password_verif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hintPsw"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"
        android:text="@string/signup"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"
        android:text="@string/back"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"
        android:text="@string/exit"/>
-
</LinearLayout>